# capframex-exporter

./: Cargo.toml  README.md  flake.nix
src/: main.rs  metrics.rs  processes.rs  sensors.rs
