[package]
name = "capframex-exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1", features = ["derive"] }
futures-util = "*"
reqwest = { version = "0.11.10", features = ["json"] }
tokio = { version = "1", features = ["full"] }
warp = "0.3.2"
